# rossmann-product-checker

./: .env  .gitignore  lint.sh  pyproject.toml  setup.cfg
rossmann_checker/: app.py
rossmann_checker/code/: checker.py
rossmann_checker/config/: config.py
rossmann_checker/helpers/: email.py
tests/: test_rossmann_checker.py
